[package]
name = "monistode-emulator-cli"
version = "0.1.6"
edition = "2021"
description = "A CLI for the Monistode emulator"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
monistode-emulator = "0.1.10"
